# IC_Proj2

./: .gitignore  README.md  copy_img.ppm
src/: AudioCodec.h  CMakeLists.txt  Golomb.h  ImageCodec.h  bitstream.h  copy.cpp  effects.cpp  main.cpp  testGolomb.cpp  test_image_codec.cpp
